# ProgRec

./: .gitignore  AGENTS.md  PLAN.md  README.md
.progrec_agent_tmp_verify/: skill4.json  skill5.json
.progrec_agent_tmp_verify2/: skill3.json  skill4.json
deployment/: .env.example  Caddyfile  PRODUCTION_RUNBOOK.md  README.md  backend.Dockerfile  docker-compose.yml  worker.Dockerfile
outputs/: _test_graph_agent.json  demo_skill4_jamie_taylor.json  demo_skill4_verified.json  final.json  final_recommendation.json
progrec_agent/: __init__.py  agent_actions.py  agent_core.py  agent_core_v2.py  agent_planner.py  agent_schema.py  chat_tool_registry.py  config.py  execution_policy.py  explainer.py  inspect_output.py  intent_router.py  llm_client.py  models.py  orchestrator.py  planner.py  prompts.py  (+14 more)
skill1_student-profiling/: README.md  SKILL.md  pyproject.toml
skill1_student-profiling/evaluation/: ablation.py  gold_annotations.json  representative_cases.py  source_contribution.py
skill1_student-profiling/examples/: sample_input.jsonl  sample_output.jsonl
skill1_student-profiling/src/student_profiling/: evaluation_helpers.py  postprocess.py  schemas.py  skill.py
skill1_student-profiling/src/student_profiling/embeddings/: __init__.py
skill1_student-profiling/src/student_profiling/extractors/: narrative.py
skill1_student-profiling/src/student_profiling/taxonomy/: mappings.py
skill1_student-profiling/src/student_profiling/taxonomy/data/: major_skills.json  uq_mapping.json
skill1_student-profiling/tests/: test_evaluation_outputs.py  test_integration.py
(+369 files in other folders)
